[metadata]
name = joyptz
version = attr: joyptz.VERSION
description = Controls PTZ ONVIF cameras with a joystick using Python
long_description = file: README.md, LICENSE
keywords = one, two
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir=
    =src
packages=find:
install_requires =
    pygame
    onvif-zeep
    paho-mqtt

[options.packages.find]
where=src
